[tool.poetry]
name = "dlp-firewall-for-rag"
version = "0.1.0"
description = ""
authors = ["Victor Alexandre"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
langchain = "^1.0.5"
langchain-openai = "^1.0.2"
chromadb = "^1.3.4"
fastapi = "^0.121.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
python-dotenv = "^1.2.1"
pydantic = "^2.12.4"
presidio-analyzer = "^2.2.360"
presidio-anonymizer = "^2.2.360"
spacy = "^3.8.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ruff (>=0.14.4,<0.15.0)"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes (erros lógicos como variáveis não usadas)
    "I",  # isort (ordenação de imports)
    "C",  # flake8-comprehensions (melhores práticas em list comprehensions)
    "B",  # flake8-bugbear (potenciais bugs e más práticas de design)
]